Thu Mar 25 09:49:33 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Avoid segfault when DocAnchors
	list has too few entries for current anchor number.

Wed Mar 24 12:20:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/main.cc (main): Call HtWordType::Initialize.  (Missed this
	one yesterday.  Oops!)

Tue Mar 23 17:11:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* backport Hans-Peter Nilsson's suite of changes for HtWordType
	and extra_word_characters support, to 3.1.2...

	* htlib/HtWordType.h (class HtWordType): New.
	* htlib/HtWordType.cc: New.
	* htlib/Makefile.in (OBJS): Add HtWordType.o

	* htdoc/attrs.html: Document attribute extra_word_characters.
	* htdoc/cf_byprog.html: Ditto.
	* htdoc/cf_byname.html: Ditto.

	* htcommon/defaults.cc (defaults): Add extra_word_characters.

	* htsearch/htsearch.h: Lose spurious extern declaration of unused
	variable valid_punctuation.
	* htsearch/htsearch.cc (main): Call HtWordType::Initialize.
	(setupWords): Use HtIsWordChar, HtIsStrictWordChar and
	HtStripPunctuation.  Do not read valid_punctuation.

	* htsearch/Display.cc (excerpt): Use HtIsStrictWordChar.

	* htlib/StringMatch.cc (FindFirstWord): Ditto.
	(CompareWord): Ditto.

	* htdig/Retriever.h (class Retriever): Lose member
	valid_punctuation.
	* htdig/Retriever.cc (Retriever): Lose its initialization.

	* htdig/Postscript.h (class Postscript): Lose member
	valid_punctuation.
	* htdig/Postscript.cc (Postscript): Lose its initialization.
	(flush_word): Use HtStripPunctuation.
	(parse_string): Use HtIsWordChar,
	HtIsStrictWordChar and HtStripPunctuation.

	* htdig/Parsable.h (class Parsable): Lose member
	valid_punctuation.
	* htdig/Parsable.cc (Parsable): Lose its initilization.

	* htcommon/WordList.cc (valid_word): Use HtIsStrictWordChar.
	(BadWordFile): Use HtStripPunctuation.  Do not read
	valid_punctuation.

	* htcommon/DocumentRef.cc (AddDescription): Use HtIsWordChar,