@@ -6,7 +6,7 @@
 //
 //
 #if RELEASE
-static char RCSid[] = "$Id: Display.cc,v 1.54.2.4 1999/03/25 15:55:52 grdetil Exp $";
+static char RCSid[] = "$Id: Display.cc,v 1.54.2.5 1999/03/25 17:55:14 grdetil Exp $";
 #endif
 
 #include "htsearch.h"
@@ -315,15 +315,15 @@ Display::displayMatch(ResultMatch *match, int current)
 	if (t)
 	{
 	    struct tm	*tm = localtime(&t);
-//			strftime(buffer, sizeof(buffer), "%e-%h-%Y", tm);
-	    if (config.Boolean("iso_8601"))
+	    char	*datefmt = config["date_format"];
+	    if (!datefmt || !*datefmt)
 	      {
-		strftime(buffer, sizeof(buffer), "%Y-%m-%d %H:%M:%S %Z", tm);
+		if (config.Boolean("iso_8601"))
+		    datefmt = "%Y-%m-%d %H:%M:%S %Z";
+		else
+		    datefmt = "%x";
 	      }
-	    else
-	      {
-		strftime(buffer, sizeof(buffer), "%x", tm);
-	      }
+	    strftime(buffer, sizeof(buffer), datefmt, tm);
 	    *str << buffer;
 	}
 	vars.Add("MODIFIED", str);
